# llogr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.docker.yaml  config.gateway.yaml  config.yaml  docker-compose.yaml  entrypoint.py  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
devops/alerting/: alert_rules.yml  slo_rules.yml
doc/: billing.swagger.yaml  langfuse-to-clickbeat-transformation.md
docs/: langfuse_comparison.md  traces.md
grafana/: llogr-dashboard.json
perf/: collect.py  history.csv
scripts/: seed.py
src/llogr/: auth.py  clickbeat.py  clickhouse.py  clickstream.py  config.py  forward.py  logging_config.py  main.py  metrics.py  models.py  processing.py  s3.py  search.py  tempo.py
src/llogr/routes/: billing.py  export.py  ingestion.py  logs.py  media.py  otel.py  scores.py  search.py  sessions.py  ui.py
src/llogr/templates/: billing.html  browser.html
tests/: conftest.py  locustfile.py  test_auth.py  test_clickbeat.py  test_clickstream.py  test_config.py  test_export.py  test_forward.py  test_health.py  test_ingestion.py  test_langfuse_compat.py  test_logs.py  test_media.py  test_metrics.py  test_otel.py  test_s3.py  test_scores.py  test_sessions.py  test_tempo.py
